--- a/mz.html
+++ b/mz.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="mz.js"></script>
+    提斯雷奥之契最优解模拟
     <!-- <meta name="gameId" content="206"/>
         <title>英雄数据表 - 梦幻模拟战WIKI_BWIKI_哔哩哔哩</title>
         <script>
